# Research_HRNetOCR

./: .gitignore  CMakeLists.txt  package.xml  readme.md  run_cityscape_Dataset  setup.py
experiments/cityscapes/: seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_12_epoch484.yaml
launch/: viz_osm.launch
lib/core/: function.py
lib/datasets/: cityscapes.py
src/data/list/cityscapes/: test.lst
src/experiments/cityscapes/: seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_12_epoch484.yaml
src/lib/config/: default.py
src/lib/core/: function.py
src/lib/datasets/: base_dataset.py  cityscapes.py  mapillary.py
src/lib/utils/: utils.py
src/tools/: roscomm.py  test.py
tools/: roscomm.py  test.py  train.py
