<package format="2">

  <name>hrnet_segment</name>
  <version>0.2.5</version>
  <description>
     HRNet Image Segmentation ROS Node
  </description>
  <maintainer email="iismn@kaist.ac.kr">LeeSangMin</maintainer>
  <author>LeeSangMin</author>
  <license>BSD</license>

  <url type="website">http://iris.kaist.ac.kr</url>
  <url type="repository">https://github.com/iismn/AGV-ROS-HRNet-OCR.git</url>
  <url type="bugtracker">https://github.com/iismn/AGV-ROS-HRNet-OCR/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rospy</depend>

  <test_depend>roslaunch</test_depend>

</package>
